--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,7 +1,21 @@
 # News - 14 series
 
 (release-14-0-5)=
-## Release 14.0.5 - 2024-06-29
+## Release 14.0.5 - 2024-07-04
+
+### Improvements
+
+* Dropped support for CentOS 7.
+
+  Because CentOS 7 reached EOL.
+
+* Added a new feature that objects(table or column) as remove as possible.
+
+  The crash safe feature of PGroonga will use this feature mainly.
+
+  PGroonga will apply PGroonga's WAL to standby database automatically by using [`Custom WAL Resource Managers`](https://www.postgresql.org/docs/current/custom-rmgr.html).
+  However, when PGroonga use `Custom WAL Resource Managers`, all replications are stop if PGroonga fail application of PGroonga's WAL due to break Groonga's object.
+  So, if broken objects exist in database, Groonga will try as remove as possible objects by using this feature.
 
 ### Fixes
 
