--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_ctx.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_ctx.po
@@ -15,12 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
-msgid "戻り値"
-msgstr ""
-
 msgid "``grn_ctx``"
 msgstr ""
 
@@ -66,116 +60,5 @@ msgstr "TODO..."
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "ctxを初期化します。"
-msgstr ""
-
-msgid "初期化するctx構造体へのポインタを指定します。"
-msgstr ""
-
-msgid "初期化する ``ctx`` のオプションを指定します。"
-msgstr ""
-
-msgid "``GRN_SUCCESS`` on success, not ``GRN_SUCCESS`` on error."
-msgstr "成功時は ``GRN_SUCCESS`` 、エラー時は ``GRN_SUCCESS`` 以外。"
-
-msgid "ctxの管理するメモリを解放し、使用を終了します。"
-msgstr ""
-
-msgid "If ``ctx`` is initialized by :c:func:`grn_ctx_open()` not :c:func:`grn_ctx_init()`, you need to use :c:func:`grn_ctx_close()` instead of :c:func:`grn_ctx_fin()`."
-msgstr ":c:func:`grn_ctx_init()` ではなく :c:func:`grn_ctx_open()` で ``ctx`` を初期化した場合、 :c:func:`grn_ctx_fin()` ではなく :c:func:`grn_ctx_close()` を使わなければいけません。"
-
-msgid "解放するctx構造体へのポインタを指定します。"
-msgstr ""
-
-msgid "初期化された :c:type:`grn_ctx` オブジェクトを返します。"
-msgstr ""
-
-msgid ":c:func:`grn_ctx_init()` で初期化された :c:type:`grn_ctx` オブジェクトは構造体の実体をAPIの呼び元で確保するのに対して、 :c:func:`grn_ctx_open()` ではGroongaライブラリの内部で、実体を確保します。 どちらで初期化された :c:type:`grn_ctx` も、 :c:func:`grn_ctx_fin()` で解放できます。 :c:func:`grn_ctx_open()` で確保した :c:type:`grn_ctx` 構造体に関しては、:c:func:`grn_ctx_fin()` で解放した後に、その :c:type:`grn_ctx` で作成した :c:type:`grn_obj` を :c:func:`grn_obj_close()` によって解放しても問題ありません。"
-msgstr ""
-
-msgid "It calls :c:func:`grn_ctx_fin()` and frees allocated memory for ``ctx`` by :c:func:`grn_ctx_open()`."
-msgstr ":c:func:`grn_ctx_fin()` を呼び出し、その後、 :c:func:`grn_ctx_open()` によって割り当てた ``ctx`` のメモリを解放する。"
-
-msgid "no longer needed :c:type:`grn_ctx`."
-msgstr "もう使わない :c:type:`grn_ctx` 。"
-
-msgid "ctxを破棄するときに呼ばれる関数を設定します。"
-msgstr ""
-
-msgid "対象ctxを指定します。"
-msgstr ""
-
-msgid "``ctx`` を破棄するときに呼ばれる関数を指定します。"
-msgstr ""
-
-msgid "command_versionを返します。"
-msgstr ""
-
-msgid "command_versionを変更します。"
-msgstr ""
-
-msgid "変更後のcommand_versionを指定します。"
-msgstr ""
-
-msgid "ctxが操作対象とするdbを指定します。NULLを指定した場合は、dbを操作しない状態(init直後の状態)になります。"
-msgstr ""
-
-msgid "Don't use it with :c:type:`grn_ctx` that has ``GRN_CTX_PER_DB`` flag."
-msgstr "``GRN_CTX_PER_DB`` フラグを指定した :c:type:`grn_ctx` と一緒に使ってはいけません。"
-
-msgid "ctxが使用するdbを指定します。"
-msgstr ""
-
-msgid "ctxが現在操作対象としているdbを返します。dbを使用していない場合はNULLを返します。"
-msgstr ""
-
-msgid "ctxが使用するdbからnameに対応するオブジェクトを検索して返す。nameに一致するオブジェクトが存在しなければNULLを返す。"
-msgstr ""
-
-msgid "検索しようとするオブジェクトの名前。"
-msgstr ""
-
-msgid "The number of bytes of name. If negative value is specified, name is assumed that NULL-terminated string."
-msgstr "名前のバイト数。負の値が指定された場合は、終端をNULL文字とした文字列として扱われる。"
-
-msgid "ctx、またはctxが使用するdbからidに対応するオブジェクトを検索して返す。idに一致するオブジェクトが存在しなければNULLを返す。"
-msgstr ""
-
-msgid "検索しようとするオブジェクトのidを指定します。"
-msgstr ""
-
-msgid "It pushes all tables in the database of ``ctx`` into ``tables_buffer``. ``tables_buffer`` should be initialized as ``GRN_PVECTOR``. You can use ``GRN_PTR_INIT()`` with ``GRN_OBJ_VECTOR`` flags to initialize ``tables_buffer``."
-msgstr ""
-
-msgid "Here is an example:"
-msgstr "以下は例です。"
-
-msgid "The context object."
-msgstr "その時点のコンテキスト。"
-
-msgid "The output buffer to store tables."
-msgstr ""
-
-msgid "Gets the current output type of the context."
-msgstr "コンテキストの出力形式を取得します。"
-
-msgid "Normally, this function isn't needed."
-msgstr ""
-
-msgid "The output type of the context."
-msgstr ""
-
-msgid "Sets the new output type to the context. It is used by executing a command by :c:func:`grn_expr_exec()`. If you use :c:func:`grn_ctx_send()`, the new output type isn't used. :c:func:`grn_ctx_send()` sets output type from command line internally."
-msgstr ""
-
-msgid "The new output type."
-msgstr "新しい出力形式。"
-
-msgid "Checks whether object with the ID is opened or not."
-msgstr "指定したIDのオブジェクトが開かれているかどうかをチェックします。"
-
-msgid "The object ID to be checked."
-msgstr "チェック対象のオブジェクトのID。"
-
-msgid "``GRN_TRUE`` if object with the ID is opened, ``GRN_FALSE`` otherwise."
-msgstr "指定したIDのオブジェクトが開かれていたら ``GRN_TRUE`` 、そうでなければ ``GRN_FALSE`` 。"
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
