--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_user_data.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_user_data.po
@@ -15,9 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
 msgid "``grn_user_data``"
 msgstr ""
 
@@ -33,8 +30,5 @@ msgstr "例"
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "objectに登録できるユーザデータへのポインタを返します。table, column, proc, exprのみ使用可能です。"
-msgstr ""
-
-msgid "対象objectを指定します。"
-msgstr ""
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
