--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_ii.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_ii.po
@@ -21,12 +21,6 @@ msgstr ""
 msgid "Summary"
 msgstr "概要"
 
-msgid "buffered index builder"
-msgstr ""
-
-msgid "特定のアプリケーション用に準備した内部APIです。"
-msgstr ""
-
 msgid "TODO..."
 msgstr "TODO..."
 
@@ -35,3 +29,6 @@ msgstr "例"
 
 msgid "Reference"
 msgstr "リファレンス"
+
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
