--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_info.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_info.po
@@ -15,9 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
 msgid "``grn_info``"
 msgstr ""
 
@@ -33,35 +30,5 @@ msgstr "例"
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "objのtypeに対応する情報をvaluebufに格納します。"
-msgstr ""
-
-msgid "対象objを指定します。"
-msgstr ""
-
-msgid "取得する情報の種類を指定します。"
-msgstr ""
-
-msgid "値を格納するバッファ（呼出側で準備）を指定します。"
-msgstr ""
-
-msgid "objのtypeに対応する情報をvalueの内容に更新します。"
-msgstr ""
-
-msgid "設定する情報の種類を指定します。"
-msgstr ""
-
-msgid "objのidに対応するレコードの、typeに対応する情報をvaluebufに格納します。呼出側ではtypeに応じて十分なサイズのバッファを確保しなければいけません。"
-msgstr ""
-
-msgid "対象IDを指定します。"
-msgstr ""
-
-msgid "objのidに対応するレコードのtypeに対応する情報をvalueの内容に更新します。"
-msgstr ""
-
-msgid "対象objectを指定します。"
-msgstr ""
-
-msgid "設定しようとする値を指定します。"
-msgstr ""
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
