--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_table_cursor.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_table_cursor.po
@@ -15,9 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
 msgid "``grn_table_cursor``"
 msgstr ""
 
@@ -33,107 +30,5 @@ msgstr "例"
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "tableに登録されているレコードを順番に取り出すためのカーソルを生成して返します。"
-msgstr ""
-
-msgid "対象tableを指定します。"
-msgstr ""
-
-msgid "keyの下限を指定します。（NULLは下限なしと見なします。） ``GRN_CURSOR_PREFIX`` については後述。"
-msgstr ""
-
-msgid "minのsizeを指定します。``GRN_CURSOR_PREFIX`` については後述。"
-msgstr ""
-
-msgid "keyの上限を指定します。（NULLは上限なしと見なします。） ``GRN_CURSOR_PREFIX`` については後述。"
-msgstr ""
-
-msgid "maxのsizeを指定します。``GRN_CURSOR_PREFIX`` については無視される場合があります。"
-msgstr ""
-
-msgid "``GRN_CURSOR_ASCENDING`` を指定すると昇順にレコードを取り出します。  ``GRN_CURSOR_DESCENDING`` を指定すると降順にレコードを取り出します。(下記 ``GRN_CURSOR_PREFIX`` を指定し、keyが近いレコードを取得する場合、もしくは、common prefix searchを行う場合には、``GRN_CURSOR_ASCENDING`` / ``GRN_CURSOR_DESCENDING`` は無視されます。)  ``GRN_CURSOR_GT`` を指定するとminに一致したkeyをcursorの範囲に含みません。(minがNULLの場合もしくは、下記 ``GRN_CURSOR_PREFIX`` を指定し、keyが近いレコードを取得する場合、もしくは、common prefix searchを行う場合には、``GRN_CURSOR_GT`` は無視されます。)  ``GRN_CURSOR_LT`` を指定するとmaxに一致したkeyをcursorの範囲に含みません。(maxがNULLの場合もしくは、下記 ``GRN_CURSOR_PREFIX`` を指定した場合には、``GRN_CURSOR_LT`` は無視されます。)  ``GRN_CURSOR_BY_ID`` を指定するとID順にレコードを取り出します。(下記 ``GRN_CURSOR_PREFIX`` を指定した場合には、``GRN_CURSOR_BY_ID`` は無視されます。) ``GRN_OBJ_TABLE_PAT_KEY`` を指定したtableについては、``GRN_CURSOR_BY_KEY`` を指定するとkey順にレコードを取り出します。( ``GRN_OBJ_TABLE_HASH_KEY`` , ``GRN_OBJ_TABLE_NO_KEY`` を指定したテーブルでは ``GRN_CURSOR_BY_KEY`` は無視されます。)  ``GRN_CURSOR_PREFIX`` を指定すると、 ``GRN_OBJ_TABLE_PAT_KEY`` を指定したテーブルに関する下記のレコードを取り出すカーソルが作成されます。maxがNULLの場合には、keyがminと前方一致するレコードを取り出します。max_sizeパラメータは無視されます。  maxとmax_sizeが指定され、かつ、テーブルのkeyがShortText型である場合、maxとcommon prefix searchを行い、common prefixがmin_sizeバイト以上のレコードを取り出します。minは無視されます。  maxとmax_sizeが指定され、かつ、テーブルのkeyが固定長型の場合、maxとPAT木上で近い位置にあるノードから順番にレコードを取り出します。ただし、keyのパトリシア木で、min_sizeバイト未満のビットに対するノードで、maxと異なった方向にあるノードに対応するレコードについては取り出しません。PAT木上で位置が近いこととkeyの値が近いことは同一ではありません。この場合、maxで与えられるポインタが指す値は、対象テーブルのkeyサイズと同じか超える幅である必要があります。minは無視されます。  ``GRN_CURSOR_BY_ID`` / ``GRN_CURSOR_BY_KEY`` / ``GRN_CURSOR_PREFIX`` の3フラグは、同時に指定することができません。  ``GRN_OBJ_TABLE_PAT_KEY`` を指定して作ったテーブルで、``GRN_CURSOR_PREFIX`` と ``GRN_CURSOR_RK`` を指定すると、半角小文字のアルファベット文字列から、それを旧JIS X 4063:2000規格に従って全角カタカナに変換した文字列に前方一致する値をkeyとするレコードを取り出します。``GRN_ENC_UTF8`` のみをサポートしています。``GRN_CURSOR_ASCENDING`` / ``GRN_CURSOR_DESCENDING`` は無効であり、レコードをkey値の昇降順で取り出すことはできません。"
-msgstr ""
-
-msgid "``GRN_CURSOR_ASCENDING`` を指定すると昇順にレコードを取り出します。"
-msgstr ""
-
-msgid "``GRN_CURSOR_DESCENDING`` を指定すると降順にレコードを取り出します。(下記 ``GRN_CURSOR_PREFIX`` を指定し、keyが近いレコードを取得する場合、もしくは、common prefix searchを行う場合には、``GRN_CURSOR_ASCENDING`` / ``GRN_CURSOR_DESCENDING`` は無視されます。)"
-msgstr ""
-
-msgid "``GRN_CURSOR_GT`` を指定するとminに一致したkeyをcursorの範囲に含みません。(minがNULLの場合もしくは、下記 ``GRN_CURSOR_PREFIX`` を指定し、keyが近いレコードを取得する場合、もしくは、common prefix searchを行う場合には、``GRN_CURSOR_GT`` は無視されます。)"
-msgstr ""
-
-msgid "``GRN_CURSOR_LT`` を指定するとmaxに一致したkeyをcursorの範囲に含みません。(maxがNULLの場合もしくは、下記 ``GRN_CURSOR_PREFIX`` を指定した場合には、``GRN_CURSOR_LT`` は無視されます。)"
-msgstr ""
-
-msgid "``GRN_CURSOR_BY_ID`` を指定するとID順にレコードを取り出します。(下記 ``GRN_CURSOR_PREFIX`` を指定した場合には、``GRN_CURSOR_BY_ID`` は無視されます。) ``GRN_OBJ_TABLE_PAT_KEY`` を指定したtableについては、``GRN_CURSOR_BY_KEY`` を指定するとkey順にレコードを取り出します。( ``GRN_OBJ_TABLE_HASH_KEY`` , ``GRN_OBJ_TABLE_NO_KEY`` を指定したテーブルでは ``GRN_CURSOR_BY_KEY`` は無視されます。)"
-msgstr ""
-
-msgid "``GRN_CURSOR_PREFIX`` を指定すると、 ``GRN_OBJ_TABLE_PAT_KEY`` を指定したテーブルに関する下記のレコードを取り出すカーソルが作成されます。maxがNULLの場合には、keyがminと前方一致するレコードを取り出します。max_sizeパラメータは無視されます。"
-msgstr ""
-
-msgid "maxとmax_sizeが指定され、かつ、テーブルのkeyがShortText型である場合、maxとcommon prefix searchを行い、common prefixがmin_sizeバイト以上のレコードを取り出します。minは無視されます。"
-msgstr ""
-
-msgid "maxとmax_sizeが指定され、かつ、テーブルのkeyが固定長型の場合、maxとPAT木上で近い位置にあるノードから順番にレコードを取り出します。ただし、keyのパトリシア木で、min_sizeバイト未満のビットに対するノードで、maxと異なった方向にあるノードに対応するレコードについては取り出しません。PAT木上で位置が近いこととkeyの値が近いことは同一ではありません。この場合、maxで与えられるポインタが指す値は、対象テーブルのkeyサイズと同じか超える幅である必要があります。minは無視されます。"
-msgstr ""
-
-msgid "``GRN_CURSOR_BY_ID`` / ``GRN_CURSOR_BY_KEY`` / ``GRN_CURSOR_PREFIX`` の3フラグは、同時に指定することができません。"
-msgstr ""
-
-msgid "``GRN_OBJ_TABLE_PAT_KEY`` を指定して作ったテーブルで、``GRN_CURSOR_PREFIX`` と ``GRN_CURSOR_RK`` を指定すると、半角小文字のアルファベット文字列から、それを旧JIS X 4063:2000規格に従って全角カタカナに変換した文字列に前方一致する値をkeyとするレコードを取り出します。``GRN_ENC_UTF8`` のみをサポートしています。``GRN_CURSOR_ASCENDING`` / ``GRN_CURSOR_DESCENDING`` は無効であり、レコードをkey値の昇降順で取り出すことはできません。"
-msgstr ""
-
-msgid "該当する範囲のレコードのうち、(0ベースで)offset番目からレコードを取り出します。  ``GRN_CURSOR_PREFIX`` を指定したときは負の数を指定することはできません。"
-msgstr ""
-
-msgid "該当する範囲のレコードのうち、(0ベースで)offset番目からレコードを取り出します。"
-msgstr ""
-
-msgid "``GRN_CURSOR_PREFIX`` を指定したときは負の数を指定することはできません。"
-msgstr ""
-
-msgid "該当する範囲のレコードのうち、limit件のみを取り出します。-1が指定された場合は、全件が指定されたものとみなします。  ``GRN_CURSOR_PREFIX`` を指定したときは-1より小さい負の数を指定することはできません。"
-msgstr ""
-
-msgid "該当する範囲のレコードのうち、limit件のみを取り出します。-1が指定された場合は、全件が指定されたものとみなします。"
-msgstr ""
-
-msgid "``GRN_CURSOR_PREFIX`` を指定したときは-1より小さい負の数を指定することはできません。"
-msgstr ""
-
-msgid ":c:func:`grn_table_cursor_open` で生成したcursorを解放します。"
-msgstr ""
-
-msgid "対象cursorを指定します。"
-msgstr ""
-
-msgid "cursorのカレントレコードを一件進めてそのIDを返します。cursorの対象範囲の末尾に達すると ``GRN_ID_NIL`` を返します。"
-msgstr ""
-
-msgid "cursorのカレントレコードのkeyをkeyパラメータにセットし、その長さを返します。"
-msgstr ""
-
-msgid "カレントレコードのkeyへのポインタがセットされます。"
-msgstr ""
-
-msgid "cursorパラメータのカレントレコードのvalueをvalueパラメータにセットし、その長さを返します。"
-msgstr ""
-
-msgid "カレントレコードのvalueへのポインタがセットされます。"
-msgstr ""
-
-msgid "cursorのカレントレコードのvalueを引数の内容に置き換えます。cursorのカレントレコードが存在しない場合は ``GRN_INVALID_ARGUMENT`` を返します。"
-msgstr ""
-
-msgid "新しいvalueの値を指定します。"
-msgstr ""
-
-msgid ":c:func:`grn_obj_set_value()` のflagsと同様の値を指定できます。"
-msgstr ""
-
-msgid "cursorのカレントレコードを削除します。cursorのカレントレコードが存在しない場合は ``GRN_INVALID_ARGUMENT`` を返します。"
-msgstr ""
-
-msgid "cursorが属するtableを返します。"
-msgstr ""
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
