--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_thread.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_thread.po
@@ -15,12 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "戻り値"
-msgstr ""
-
-msgid "パラメータ"
-msgstr ""
-
 msgid "``grn_thread_*``"
 msgstr ""
 
@@ -45,47 +39,5 @@ msgstr "以下は、 :doc:`/reference/executables/groonga` が実際に使って
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "It's the type of function that returns the max number of threads."
-msgstr "最大スレッド数を返す関数の型です。"
-
-msgid "It's the type of function that sets the max number of threads."
-msgstr "最大スレッド数を設定する関数の型です。"
-
-msgid "It returns the max number of threads."
-msgstr "最大スレッド数を返します。"
-
-msgid "If :c:type:`grn_thread_get_limit_func` isn't set by :c:func:`grn_thread_set_get_limit_func()`, it always returns ``0``."
-msgstr ":c:func:`grn_thread_set_get_limit_func()` で :c:type:`grn_thread_get_limit_func` を設定していない場合は、常に ``0`` を返します。"
-
-msgid "The max number of threads or ``0``."
-msgstr "最大スレッド数または ``0`` 。"
-
-msgid "It sets the max number of threads."
-msgstr "最大スレッド数を設定します。"
-
-msgid "If :c:type:`grn_thread_set_limit_func` isn't set by :c:func:`grn_thread_set_set_limit_func()`, it does nothing."
-msgstr ":c:func:`grn_thread_set_set_limit_func()` で :c:type:`grn_thread_set_limit_func` を設定していない場合はなにもしません。"
-
-msgid "The new max number of threads."
-msgstr "新しい最大スレッド数。"
-
-msgid "It sets the custom function that returns the max number of threads."
-msgstr "最大スレッド数を返すカスタム関数を設定します。"
-
-msgid "``data`` is passed to ``func`` when ``func`` is called from :c:func:`grn_thread_get_limit()`."
-msgstr "``data`` は :c:func:`grn_thread_get_limit()` が ``func`` を呼ぶときに ``func`` に渡されます。"
-
-msgid "The custom function that returns the max number of threads."
-msgstr "最大スレッド数を返すカスタム関数。"
-
-msgid "An user data to be passed to ``func`` when ``func`` is called."
-msgstr "``func`` が呼ばれるときに ``func`` に渡されるユーザーのためのデータ。"
-
-msgid "It sets the custom function that sets the max number of threads."
-msgstr "最大スレッド数を設定するカスタム関数を設定します。"
-
-msgid "``data`` is passed to ``func`` when ``func`` is called from :c:func:`grn_thread_set_limit()`."
-msgstr "``data`` は :c:func:`grn_thread_set_limit()` が ``func`` を呼ぶときに ``func`` に渡されます。"
-
-msgid "The custom function that sets the max number of threads."
-msgstr "最大スレッド数を設定するカスタム関数。"
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
