doc: add missing translation

--- a/doc/locale/ja/LC_MESSAGES/install/debian.po
+++ b/doc/locale/ja/LC_MESSAGES/install/debian.po
@@ -61,8 +61,8 @@ msgstr "groonga-normalizer-mysqlパッケージのインストール::"
 msgid "Build from source"
 msgstr "ソースからビルド"
 
-msgid "Install required packages to build Groonga for Debian bullseye::"
-msgstr "Debian bullseyeでGroongaをビルドするために必要なパッケージをインストールします::"
+msgid "Install required packages to build Groonga::"
+msgstr "Groongaをビルドするために必要なパッケージをインストールします::"
 
 msgid "Download source::"
 msgstr "ソースをダウンロードします::"
