--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,68 @@
 # News - 14 series
 
+(release-14-0-6)=
+## Release 14.0.6 - 2024-07-29
+
+### Improvements
+
+* Added support for prefix search with index against vector column.
+
+  We can prefix search with index against vector column as below since this release.
+
+  ```
+  table_create Users TABLE_NO_KEY
+  column_create Users name COLUMN_SCALAR ShortText
+
+  load --table Users
+  [
+  {"name": "alice"},
+  {"name": "bob"},
+  {"name": "callum"},
+  {"name": "marshal"}
+  ]
+
+  select Users --query 'name:^al'
+  [
+    [
+      0,
+      0.0,
+      0.0
+    ],
+    [
+      [
+        [
+          2
+        ],
+        [
+          [
+            "_id",
+            "UInt32"
+          ],
+          [
+            "name",
+            "ShortText"
+          ]
+        ],
+        [
+          1,
+          [
+            "alice"
+          ]
+        ],
+        [
+          4,
+          [
+            "elly",
+            "alice"
+          ]
+        ]
+      ]
+    ]
+  ]
+  ```
+
+* [{doc}`/install/debian`] Dropped support for Debian 11 (bullseye).
+
 (release-14-0-5)=
 ## Release 14.0.5 - 2024-07-04
 
