doc news: fix wrong example

--- a/doc/locale/ja/LC_MESSAGES/news/14.po
+++ b/doc/locale/ja/LC_MESSAGES/news/14.po
@@ -23,11 +23,11 @@ msgstr "14.0.6リリース - 2024-07-29"
 msgid "Improvements"
 msgstr "改良"
 
-msgid "Added support for prefix search with index against vector column."
-msgstr "インデックスを設定したベクターカラムに対して、前方一致検索ができるようになりました。"
+msgid "Added support for prefix search without index against vector column."
+msgstr "インデックスを設定していないベクターカラムに対して、前方一致検索ができるようになりました。"
 
-msgid "We can prefix search with index against vector column as below since this release."
-msgstr "このリリースから、以下のようにインデックスを設定したベクターカラムに対して前方一致検索ができます。"
+msgid "We can prefix search without index against vector column as below since this release."
+msgstr "このリリースから、以下のようにインデックスを設定していないベクターカラムに対して前方一致検索ができます。"
 
 msgid "[{doc}`/install/debian`] Dropped support for Debian 11 (bullseye)."
 msgstr "[{doc}`/install/debian`] Debian 11 (bullseye) のサポートをやめました。"
