--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -5,20 +5,21 @@
 
 ### Improvements
 
-* Added support for prefix search with index against vector column.
+* Added support for prefix search without index against vector column.
 
-  We can prefix search with index against vector column as below since this release.
+  We can prefix search without index against vector column as below since this release.
 
   ```
   table_create Users TABLE_NO_KEY
-  column_create Users name COLUMN_SCALAR ShortText
+  column_create Users name COLUMN_VECTOR ShortText
 
   load --table Users
   [
-  {"name": "alice"},
-  {"name": "bob"},
-  {"name": "callum"},
-  {"name": "marshal"}
+  {"name": ["alice"]},
+  {"name": ["bob"]},
+  {"name": ["callum"]},
+  {"name": ["elly", "alice"]},
+  {"name": ["marshal"]}
   ]
 
   select Users --query 'name:^al'
