--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -7,7 +7,10 @@
 
 * Added support for prefix search without index against vector column.
 
-  We can prefix search without index against vector column as below since this release.
+  We can already prefix search with index against vector column.
+  However, we can't prefix search without index against vector column until now.
+
+  We can also prefix search without index against vector column as below since this release.
 
   ```
   table_create Users TABLE_NO_KEY
