--- a/doc/locale/ja/LC_MESSAGES/news/14.po
+++ b/doc/locale/ja/LC_MESSAGES/news/14.po
@@ -17,11 +17,26 @@ msgstr ""
 msgid "News - 14 series"
 msgstr "お知らせ - 14系"
 
-msgid "Release 14.0.5 - 2024-07-04"
-msgstr "14.0.5リリース - 2024-07-04"
+msgid "Release 14.0.6 - 2024-07-29"
+msgstr "14.0.6リリース - 2024-07-29"
 
 msgid "Improvements"
 msgstr "改良"
+
+msgid "Added support for prefix search without index against vector column."
+msgstr "インデックスを設定していないベクターカラムに対して、前方一致検索ができるようになりました。"
+
+msgid "We can already prefix search with index against vector column. However, we can't prefix search without index against vector column until now."
+msgstr "すでに、インデックスを設定したベクターカラムに対しては前方一致検索できますが、インデックスを設定していないベクターカラムに対しては、今まで前方一致検索できませんでした。"
+
+msgid "We can also prefix search without index against vector column as below since this release."
+msgstr "このリリースから、以下のようにインデックスを設定していないベクターカラムに対しても前方一致検索ができます。"
+
+msgid "[{doc}`/install/debian`] Dropped support for Debian 11 (bullseye)."
+msgstr "[{doc}`/install/debian`] Debian 11 (bullseye) のサポートをやめました。"
+
+msgid "Release 14.0.5 - 2024-07-04"
+msgstr "14.0.5リリース - 2024-07-04"
 
 msgid "Dropped support for CentOS 7."
 msgstr "CentOS 7のサポートをやめました。"
