doc package: update version info to 14.0.6 (2024-07-29)

--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (14.0.6-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Mon, 29 Jul 2024 02:36:24 -0000
+
 groonga (14.0.5-1) unstable; urgency=low
 
   * New upstream release.
