--- a/doc/locale/ja/LC_MESSAGES/contribution/development/release.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/development/release.po
@@ -508,10 +508,10 @@ msgstr ""
 msgid "そのためにはまず ``groonga`` のリポジトリをカレントディレクトリにして以下のコマンドを実行します。"
 msgstr ""
 
-msgid "ここでは最新のtagに基づいてリリースバージョンを調べ、明示的にそのバージョンを指定してドキュメントを更新するようにしています。 これによりcloneしておいたgroonga.orgのdoc/locale以下に更新したドキュメントがコピーされます。"
+msgid "これで、 ``groonga.org`` の ``docs/`` と ``ja/docs`` 以下に更新したドキュメントがコピーされます。"
 msgstr ""
 
-msgid "生成されているドキュメントに問題のないことを確認できたら、コミット、pushしてgroonga.orgへと反映します。"
+msgid "生成されているドキュメントに問題のないことを確認できたら、コミット、pushして ``groonga.org`` へと反映します。"
 msgstr ""
 
 msgid "また、 ``groonga.org`` リポジトリの ``_config.yml`` に最新リリースのバージョン番号と日付を表す情報の指定があるので、これらも更新します。"
