--- a/doc/locale/ja/LC_MESSAGES/reference/executables/groonga.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/executables/groonga.po
@@ -369,6 +369,12 @@ msgstr ""
 msgid "検索の挙動をエスカレーションする閾値を指定します。(デフォルトは0です)"
 msgstr ""
 
+msgid "Specifies the default value of the ``n_workers`` option of :doc:`/reference/commands/select` command."
+msgstr ":doc:`/reference/commands/select` コマンドの ``n_workers`` オプションのデフォルト値を指定します。"
+
+msgid "The default value is ``0``."
+msgstr "デフォルト値は ``0`` です。"
+
 msgid "Specifies the default request timeout in seconds."
 msgstr "デフォルトのリクエストタイムアウトを指定します。単位は秒です。"
 
@@ -377,9 +383,6 @@ msgstr "``0.1`` のように小数で指定することで1秒未満のタイム
 
 msgid "If you specify ``0`` or less value, request timeout is disabled by default."
 msgstr "``0`` 未満の値を指定するとデフォルトでリクエストタイムアウトは無効になります。"
-
-msgid "The default value is ``0``."
-msgstr "デフォルト値は ``0`` です。"
 
 msgid ":doc:`/reference/command/request_timeout`"
 msgstr ""
