Use "the number of workers" not "n_workers"
Some processes may use different parameter name for the number of workers.

--- a/doc/locale/ja/LC_MESSAGES/reference/executables/groonga.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/executables/groonga.po
@@ -369,8 +369,8 @@ msgstr ""
 msgid "検索の挙動をエスカレーションする閾値を指定します。(デフォルトは0です)"
 msgstr ""
 
-msgid "Specifies the default ``n_workers`` value of the Groonga process. For example, it's used by the default value of ``n_workers`` of :doc:`/reference/commands/select`."
-msgstr "Groongaプロセスのデフォルトの ``n_workers`` の値を指定します。例として、:doc:`/reference/commands/select` の ``n_workers`` のデフォルト値として使用されます。"
+msgid "Specifies the default number of workers of the Groonga process. For example, it's used by the default value of ``n_workers`` of :doc:`/reference/commands/select`."
+msgstr "Groongaプロセスのデフォルトのワーカー数を指定します。例として、:doc:`/reference/commands/select` の ``n_workers`` のデフォルト値として使用されます。"
 
 msgid "The default value is ``0``."
 msgstr "デフォルト値は ``0`` です。"
