groonga: add --default-n-workers option (#1857)
GitHub: fix GH-1747

This PR will add `--default-n-workers` as a groonga launch option.

Example:
```
$ groonga --default-n-workers=3
> status
[
  [
    0,
    1722925811.067726,
    0.0007288455963134766
  ],
  {
    "alloc_count": 412,
    "starttime": 1722925808,
    "start_time": 1722925808,
    "uptime": 3,
    "version": "14.0.6-25-gd030603",
    "n_queries": 0,
    "cache_hit_rate": 0.0,
    "command_version": 1,
    "default_command_version": 1,
    "max_command_version": 3,
    "n_jobs": 0,
    "features": {
      "nfkc": true,
      "mecab": true,
      "message_pack": true,
      "mruby": false,
      "onigmo": true,
      "zlib": true,
      "lz4": true,
      "zstandard": true,
      "kqueue": false,
      "epoll": true,
      "poll": false,
      "rapidjson": false,
      "apache_arrow": false,
      "xxhash": true,
      "blosc": false,
      "bfloat16": true,
      "h3": true,
      "simdjson": true,
      "back_trace": true,
      "reference_count": false
    },
    "memory_map_size": 86855680,
    "n_workers": 3,
    "default_n_workers": 3
  }
]
```

---------

Co-authored-by: Sutou Kouhei <kou@cozmixng.org>

--- a/doc/locale/ja/LC_MESSAGES/reference/executables/groonga.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/executables/groonga.po
@@ -369,6 +369,12 @@ msgstr ""
 msgid "検索の挙動をエスカレーションする閾値を指定します。(デフォルトは0です)"
 msgstr ""
 
+msgid "Specifies the default number of workers of the Groonga process. For example, it's used by the default value of ``n_workers`` of :doc:`/reference/commands/select`."
+msgstr "Groongaプロセスのデフォルトのワーカー数を指定します。例として、:doc:`/reference/commands/select` の ``n_workers`` のデフォルト値として使用されます。"
+
+msgid "The default value is ``0``."
+msgstr "デフォルト値は ``0`` です。"
+
 msgid "Specifies the default request timeout in seconds."
 msgstr "デフォルトのリクエストタイムアウトを指定します。単位は秒です。"
 
@@ -377,9 +383,6 @@ msgstr "``0.1`` のように小数で指定することで1秒未満のタイム
 
 msgid "If you specify ``0`` or less value, request timeout is disabled by default."
 msgstr "``0`` 未満の値を指定するとデフォルトでリクエストタイムアウトは無効になります。"
-
-msgid "The default value is ``0``."
-msgstr "デフォルト値は ``0`` です。"
 
 msgid ":doc:`/reference/command/request_timeout`"
 msgstr ""
