--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_table_cursor.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_table_cursor.po
@@ -15,9 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
 msgid "``grn_table_cursor``"
 msgstr ""
 
@@ -33,14 +30,5 @@ msgstr "例"
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "cursorのカレントレコードのvalueを引数の内容に置き換えます。cursorのカレントレコードが存在しない場合は ``GRN_INVALID_ARGUMENT`` を返します。"
-msgstr ""
-
-msgid "対象cursorを指定します。"
-msgstr ""
-
-msgid "新しいvalueの値を指定します。"
-msgstr ""
-
-msgid ":c:func:`grn_obj_set_value()` のflagsと同様の値を指定できます。"
-msgstr ""
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
