doc news: add 14.0.7 entry

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,46 @@
 # News - 14 series
 
+(release-14-0-7)=
+## Release 14.0.7 - 2024-08-29
+
+### Improvements
+
+* [NormalizerNFKC] Added a new option `unify_alphabet_diacritical_mark`.
+
+* Added support for simdjson.
+
+  This keeps RapidJSON support but we'll remove RapidJSON support later.
+
+* [{doc}`/install/ubuntu`] Dropped support for Ubuntu 23.10 (Mantic Minotaur)
+
+  Because Ubuntu 23.10 reached EOL at July 11, 2024.
+
+* Distributed the install packages which enabled libedit.
+
+### Fixes
+
+* [status] Fixed a bug that "h3" is never shown in `groonga --version`/`status`.
+
+* Fixed a crash bug when log rotate is enabled.
+
+  This bus occurred in the following conditions.
+
+  1. When logging to a file by specification the following options.
+
+    * `--log-path <path>`
+    * `--query-log-path <path>`
+
+  2. Log rotate is enabled by specification the following options.
+
+    * `--log-rotate-threshold-size <threshold>`
+    * `--query-log-rotate-threshold-size <threshold>`
+
+  3. Process ID log output is enabled by specification the following options.
+
+    * `--log-flags process_id`
+
+* Fixed a bug if we specify `GRN_WITH_BUNDLED_ONIGMO=OFF`, Groonga use bundled Onigmo. [termux/termux-packages#21252][Patch by Biswapriyo Nath]
+
 (release-14-0-6)=
 ## Release 14.0.6 - 2024-07-29
 
