--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -41,6 +41,11 @@
 
 * Fixed a bug if we specify `GRN_WITH_BUNDLED_ONIGMO=OFF`, Groonga use bundled Onigmo. [termux/termux-packages#21252][Patch by Biswapriyo Nath]
 
+### Thanks
+
+  * Man Hoang
+  * Biswapriyo Nath
+
 (release-14-0-6)=
 ## Release 14.0.6 - 2024-07-29
 
