--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -66,7 +66,7 @@
   ]
   ```
 
-* Added support for simdjson.
+* Added support for [simdjson](https://simdjson.org/).
 
   This keeps RapidJSON support but we'll remove RapidJSON support later.
 
