--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -82,7 +82,7 @@
 
 * Fixed a crash bug when log rotate is enabled.
 
-  This bus occurred in the following conditions.
+  This bug occurred in the following conditions.
 
   1. When logging to a file by specification the following options.
 
